# RXMesh

apps/: CMakeLists.txt
apps/ARAP/: arap.cu
apps/SCP/: scp.cu
apps/intro/: CMakeLists.txt  intro.cu
tests/Polyscope_test/: test_polyscope.cu
